--- a/app/views/common/partial_history.scala.html
+++ b/app/views/common/partial_history.scala.html
@@ -7,6 +7,7 @@
 @(posting:models.AbstractPosting)
 
 @import utils.TemplateHelper._
+@import utils.HtmlUtil
 
 <div id="-yona-posting-history" class="modal hide">
     <div class="modal-header">
@@ -15,7 +16,7 @@
     </div>
     <div class="modal-body">
         <p>
-            @Html(posting.history)
+            @Html(HtmlUtil.defaultSanitize(posting.history))
         </p>
     </div>
     <div class="modal-footer">
