--- a/app/views/user/edit.scala.html
+++ b/app/views/user/edit.scala.html
@@ -1,27 +1,14 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Ahn Hyeok Jun
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(userForm: play.data.Form[User], user:User)
 
 @import helper._
 @import utils.TemplateHelper._
+@import utils.HtmlUtil
 
 @siteLayout(user.loginId, utils.MenuType.USER) {
 <div class="site-breadcrumb-outer">
@@ -41,7 +28,7 @@
             </dd>
           <dt>@Messages("user.name")</dt>
           <dd class="mt10">
-            <input type="text" name="name" class="text" value="@user.name">
+            <input type="text" name="name" class="text" value="@HtmlUtil.defaultSanitize(user.name)">
           </dd>
           <dt>@Messages("user.email")</dt>
           <dd class="mt10">
